--- a/c34/src/main/res/layout/activity_main.xml
+++ b/c34/src/main/res/layout/activity_main.xml
@@ -2,8 +2,11 @@
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/custom_listView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="match_parent" />
 
-    />
+
+
+
+
 
 
